<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MosHack</string>
    <string name="title_activity_maps">Map</string>

    <string name="welcome_string">Добро пожаловать!</string>
    <string name="selection_string">Выберите до 5 любимых Вами жанров фильмов или книг:</string>
    <string name="next_string">Далее</string>

    <string name="date">29 июня</string>
    <string name="time">19.00</string>
    <string name="date_and_weekday">29 июня, четверг</string>
    <string name="sphere">Спектакль</string>
    <string name="free">Бесплатно</string>
    <string name="event_name">«Прометей прикованный» в культурном центре «Новослободский»</string>

    <string name="my_channel_text">Мой канал</string>
    <string name="my_channel_name">Искусствовед Андрей</string>
    <string name="my_subs_full">341 подписчик</string>
    <string name="my_likes_full">1203 лайка</string>
    <string name="channels_header">Интересные каналы</string>
    <string name="cats_button">Категории</string>
    <string name="authors_button">Авторские</string>
    <string name="author_channel_name">Тропарёво-Никулино</string>
    <string name="subs_full">421 подписчик</string>
    <string name="authors_channel_short_desc">События в парках, музеях, выставки в районе</string>


    <string name="channel_name">User</string>
    <string name="channel_desc">Театральные постановки, пьесы…</string>
    <string name="channel_desc_full">Театральные постановки, пьесы, мюзиклы и многое другое в театрах и концертных залах города.</string>

    <string name="subscribe">Подписаться</string>
    <string name="unsubscribe">Отписаться</string>

    <string name="my_afisha">Моя афиша</string>

    <string name="categories">Категории и каналы</string>
    <string name="calendar">Календарь</string>
    <string name="my_events">Мои события</string>
    <string name="near_events">События рядом</string>
    <string name="events">Лента событий</string>

    <string name="button_all">Всё</string>
    <string name="button_subs">Выставки</string>
    <string name="button_rec">Для детей</string>
    <string name="for_kids">Рекомендации</string>
    <string name="inclusive">Доступная среда</string>

    <string name="place_name">Культурный центр «Новослободский»</string>
    <string name="date_time">29 июня, 19.00</string>
    <string name="full_event_desc">Молодые актеры театра-студии «Три ступени» покажут спектакль
        «Прометей прикованный» по пьесе древнегреческого драматурга Эсхила. Дарья Кабанова,
        режиссер постановки, предлагает зрителям взглянуть на поступки Прометея с непривычной
        точки зрения."</string>

    <string name="go_button_text_free">Записаться</string>
    <string name="go_button_text_paid">Купить билет</string>
    <string name="go_to_map_text">На карте</string>
    <string name="phone" tools:ignore="TypographyDashes">8-999-555-33-22</string>

    <string name="planned">Предстоящие</string>
    <string name="visited">Посещённые</string>

    <string name="rate">Оценить</string>
    <string name="rated">Оценено</string>

    <string name="welcome">Добро пожаловать в Афишу Москвы!</string>
    <string name="survey_desc">Ответьте на пару вопросов, и мы поймём,
        какие мероприятия вам лучше предложить:</string>
    <string name="age_question">Сколько Вам лет?</string>
    <string name="child_question">Есть ли у Вас дети до 14?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="sphere_question">Какие мероприятия вам интересны? (до 5 вариантов)</string>
    <string name="go_next">Продолжить</string>

    <!-- New post activity -->
    <string name="new_post_header">Новый пост</string>
    <string name="pin_image">Картинка</string>
    <string name="pin_event">Доб. событие</string>
    <string name="pin_back_event">К редактированию</string>
    <string name="publish">Опубликовать</string>
    <string name="post_header">Заголовок поста</string>
    <string name="post_image">Ссылки на картинки к посту</string>
    <string name="post_text">Введите текст поста</string>
    <string name="pin_event_header">Добавить событие</string>
    <string name="search_all_events">Поиск по всем событиям</string>
    <string name="your_events">Ваши события:</string>

    <!-- Short event info -->
    <string name="short_info_header">«Число как образ» в галерее «А3»</string>
    <string name="short_info_time">19 июня</string>
    <string name="short_info_sphere">Выставка</string>
    <string name="short_info_free">Бесплатно</string>

    <!-- Full post activity -->
    <string name="full_post_header">Уличные выставки на выходных</string>
    <string name="full_post_text">В городе проводится много разных уличных выставок, некоторые из
        которых не обойдёшь стороной. Это и различные исторические, и художественные выставки.
        Собрал свою личную подборку с выставками, которые мне кажутся наиболее интересными и которые можно
        посетить на ближайших выходных.
    </string>
    <string name="pinned_events">Прикреплённые события:</string>
    <string name="comments_header">Комментарии:</string>
    <string name="likes_num">12</string>
    <string name="coms_num">2</string>
    <string name="enter_comment">Введите комментарий</string>
    <string name="comment_text">Спасибо за подборку! Обязательно схожу на что-то из этого в выходные!</string>

    <!-- Channel full info activity -->
    <string name="full_channel_likes">1242</string>
    <string name="full_channel_subs">412</string>
    <string name="full_channel_desc">Подборка интересных выставок и художественных мероприятий
        Москвы от искусствоведа с образованием</string>
    <string name="subs_button">Подписки</string>
    <string name="my_posts">Посты</string>
    <string name="short_post_text">В городе проводится много разных уличных выставок,
        некоторые из которых не обойдёшь стороной. Это…</string>
    <string name="show_pinned_events">Просмотреть прикреплённые мероприятия</string>
    <string name="channel_feed">Лента канала</string>
</resources>