<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <GridLayout
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/buttonsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:rowCount="2"
            android:columnCount="2">

            <Button
                android:id="@+id/categoriesButton"
                android:layout_width="0dp"
                android:layout_height="80dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/calendarButton"
                android:text="@string/categories"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="6dp"
                android:textAllCaps="false"
                android:onClick="onClick"
                style="@style/BigButtonThemeActive"
                android:backgroundTint="@color/category_red"
                android:textAlignment="textStart"
                android:drawableLeft="@drawable/ic_round_category_48"
                android:textSize="16sp"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/calendarButton"
                android:layout_width="0dp"
                android:layout_height="80dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/categoriesButton"
                android:text="@string/calendar"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="16dp"
                android:textAllCaps="false"
                android:onClick="onClick"
                style="@style/BigButtonThemeActive"
                android:backgroundTint="@color/category_blue"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:drawableLeft="@drawable/ic_round_today_48"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/favButton"
                android:layout_width="0dp"
                android:layout_height="80dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/categoriesButton"
                app:layout_constraintEnd_toStartOf="@id/mapButton"
                android:text="@string/my_events"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginStart="16dp"
                android:onClick="onClick"
                android:layout_marginEnd="6dp"
                android:textAllCaps="false"
                style="@style/BigButtonThemeActive"
                android:backgroundTint="@color/category_violet"
                android:textSize="16sp"
                android:drawableLeft="@drawable/ic_round_bookmark_added_48"
                android:textAlignment="textStart"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/mapButton"
                android:layout_width="0dp"
                android:layout_height="80dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/calendarButton"
                app:layout_constraintStart_toEndOf="@id/favButton"
                android:text="@string/near_events"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="16dp"
                android:textAllCaps="false"
                android:onClick="onClick"
                style="@style/BigButtonThemeActive"
                android:backgroundTint="@color/category_pink"
                android:textSize="16sp"
                android:drawableLeft="@drawable/ic_round_map_48"
                android:textAlignment="textStart"
                android:textStyle="bold"/>

        </GridLayout>

        <TextView
            android:id="@+id/carouselHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/buttonsContainer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/events"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"/>

        <HorizontalScrollView
            android:layout_marginTop="4dp"
            android:id="@+id/carouselContainer"
            android:scrollbars="none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/carouselHeader"
            app:layout_constraintStart_toStartOf="parent"
            >

            <LinearLayout
                android:id="@+id/buttonsCarousel"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/buttonAll"
                    android:text="@string/button_all"
                    android:layout_marginStart="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/SmallButtonThemeInactive"
                    android:backgroundTint="@color/main_blue"
                    android:textColor="@color/white"
                    />

                <Button
                    android:id="@+id/buttonSubs"
                    android:text="@string/button_subs"
                    android:layout_marginStart="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/SmallButtonThemeInactive"
                    />

                <Button
                    android:id="@+id/buttonRec"
                    android:text="@string/button_rec"
                    android:layout_marginStart="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/SmallButtonThemeInactive"
                    />

                <Button
                    android:id="@+id/forKids"
                    android:text="@string/for_kids"
                    android:layout_marginStart="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/SmallButtonThemeInactive"
                    />

                <Button
                    android:id="@+id/inclusive"
                    android:text="@string/inclusive"
                    android:layout_marginStart="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    style="@style/SmallButtonThemeInactive"
                    />

            </LinearLayout>

        </HorizontalScrollView>
        
        <LinearLayout
            android:layout_marginTop="16dp"
            android:id="@+id/mainEventContainer"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/carouselContainer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>