<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/shortEventInfoCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/shortEventInfoContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/shortInfoHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/short_info_header"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/shortInfoTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/shortInfoHeader"
                android:text="@string/short_info_time"
                android:textSize="18sp"
                android:layout_marginTop="4dp"
                />

            <TextView
                android:id="@+id/shortInfoSphere"
                android:layout_marginTop="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/shortInfoTime"
                android:text="@string/short_info_sphere"
                android:textSize="18sp"
                android:textColor="@color/main_blue"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/shortInfoFree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toEndOf="@id/shortInfoSphere"
                app:layout_constraintTop_toBottomOf="@id/shortInfoTime"
                android:text="@string/short_info_free"
                android:textSize="18sp"
                android:layout_marginStart="10dp"
                android:textColor="@color/light_green"
                android:textStyle="bold"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>