<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/imageButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:layout_weight="1"
        app:cardCornerRadius="16dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/dateTextView"
                android:id="@+id/eventImageView"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:minHeight="160dp"
                android:minWidth="400dp"
                app:srcCompat="@drawable/mock_image"
                android:scaleType="centerCrop"
                />

            <TextView
                android:id="@+id/dateTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/eventImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"/>

            <TextView
                app:layout_constraintTop_toBottomOf="@id/eventImageView"
                app:layout_constraintStart_toEndOf="@id/dateTextView"
                android:id="@+id/sphereTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sphere"
                android:textColor="@color/main_blue"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                />

            <TextView
                android:id="@+id/freeTextView"
                app:layout_constraintTop_toBottomOf="@id/eventImageView"
                app:layout_constraintStart_toEndOf="@id/sphereTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/free"
                android:textColor="@color/light_green"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                />

            <TextView
                android:id="@+id/eventHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event_name"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/ratingButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dateTextView"
                android:textColor="@color/black"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp" />

            <Button
                android:id="@+id/ratingButton"
                style="@style/BigButtonThemeActive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:elegantTextHeight="true"
                android:text="@string/rate"
                android:textAllCaps="false"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/eventHeader"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>