<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/profileCommentPicCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:elevation="12dp"
        app:cardCornerRadius="40dp"
        android:layout_centerHorizontal="true"
        android:innerRadius="0dp"
        android:shape="ring"
        android:thicknessRatio="1.9"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp">

        <ImageView
            android:id="@+id/profileCommentPic"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:src="@color/white_gray"
            />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/profileCommentChannelName"
        app:layout_constraintStart_toEndOf="@id/profileCommentPicCard"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_channel_name"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        android:layout_marginStart="12dp"
        />

    <TextView
        android:id="@+id/commentTime"
        app:layout_constraintStart_toEndOf="@id/profileCommentPicCard"
        app:layout_constraintTop_toBottomOf="@id/profileCommentChannelName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/short_info_time"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/commentText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/commentTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comment_text"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/black"
        />

    <ImageView
        android:id="@+id/commentLikeIcon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_round_favorite_border_24"
        app:layout_constraintEnd_toStartOf="@id/commentLikeCount"
        app:layout_constraintTop_toTopOf="@id/commentLikeCount"
        app:layout_constraintBottom_toBottomOf="@id/commentLikeCount"
        android:layout_marginEnd="2dp"/>

    <TextView
        android:id="@+id/commentLikeCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/commentText"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/likes_num"
        android:textSize="20sp"
        android:layout_marginEnd="16dp"
        android:paddingBottom="1dp"
        />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@id/commentLikeCount"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="4dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>